--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,11 @@ Table of Content:
 
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 html {
   height: 100%;
 }
@@ -1253,12 +1258,13 @@ ul.list-style li:last-child {
 
 /*=========== side_menu css ===========*/
 .side_menu {
-  width: 300px;
+  /* width: 300px; */
+  width: 80vw;
   height: 100vh;
   max-height: 100vh;
   top: 0;
   position: fixed;
-  transform: translate3d(-300px, 0, 0);
+  transform: translate3d(-80vw, 0, 0);
   transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 1013;
   background: #fff;
@@ -1290,14 +1296,14 @@ ul.list-style li:last-child {
 }
 .side_menu .mobile_nav_wrapper {
   display: flex;
-  transform: translate3d(-300px, 0, 0);
+  transform: translate3d(-80vw, 0, 0);
   transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .side_menu .mobile_nav_top, .side_menu .mobile_nav_bottom {
   height: calc(100vh - 65px);
   flex-shrink: 0;
   display: block;
-  width: 300px;
+  width: 80vw;
   padding: 0 15px;
 }
 .side_menu .mobile_nav_top {
@@ -1347,7 +1353,7 @@ ul.list-style li:last-child {
 /*----------------------------------------------------*/
 /*=========== doc_banner_area_one css ============*/
 .doc_banner_area_one {
-  height: 750px;
+  height: 560px;
   display: flex;
   align-items: center;
   background-image: linear-gradient(60deg, #10b3d6 0%, #1d2746 100%);
@@ -3436,8 +3442,8 @@ ul.list-style li:last-child {
   border-radius: 50%;
   background-color: #fdfdfd;
   box-shadow: 0 0 100px 0 rgba(4, 46, 56, 0.14);
-  width: 248px;
-  height: 248px;
+  width: 300px;
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9833,6 +9839,15 @@ ul.contains-task-list li.task-list-item input:checked {
   box-shadow: 0 12px 15px 0 rgba(4, 73, 89, 0.06) !important;
 }
 
+.loader-img {
+  width: 80px
+}
+
 .logo-img {
-  width: 100px;
+  width: 51px;
+}
+
+.mobile_main_menu ul.menu li a {
+  color: white !important;
+  text-transform: unset;
 }
