--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="{% static 'img/spinner_logo.png' %}" alt="">
-                    <h4><span>My Research</span> Notes</h4>
+                    <h4><span>Personal Notes</span></h4>
                 </div>
             </div>
             <p></p>
@@ -136,97 +136,21 @@
         {% block content %}
         {% endblock content %}
         
-        <section class="doc_action_area parallaxie" data-background="{% static 'img/bg.jpg" style="background: url({% static 'img/home_one/action_bg.jpg) no-repeat scroll;">
-            <div class="overlay_bg"></div>
+        <footer class="simple_footer">
+            <img class="leaf_right" src="{% static 'img/home_one/leaf_footter.png' %}" alt="">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-9 col-sm-8">
-                        <div class="action_text">
-                            <h2>Con't find an answer?</h2>
-                            <p>Head over to our Discord channel</p>
-                        </div>
+                    <div class="col-sm-6">
+                        <p>A Personal Website to Browse through my notes</a></p>
                     </div>
-                    <div class="col-lg-3 col-sm-4">
-                        <a href="#" class="action_btn">Discord Channel <i class="arrow_right"></i></a>
+                    <div class="col-sm-6 text-right">
+                        <ul class="list-unstyled f_social_icon">
+                            <li><a href="#"><i class="social_facebook"></i></a></li>
+                            <li><a href="#"><i class="social_twitter"></i></a></li>
+                            <li><a href="#"><i class="social_vimeo"></i></a></li>
+                            <li><a href="#"><i class="social_linkedin"></i></a></li>
+                        </ul>
                     </div>
-                </div>
-            </div>
-        </section>
-        <footer class="footer_area f_bg_color">
-            <img class="p_absolute leaf" src="{% static 'img/v.svg' %}" alt="">
-            <img class="p_absolute f_man" src="{% static 'img/home_two/f_man.png' %}" alt="">
-            <img class="p_absolute f_cloud" src="{% static 'img/home_two/cloud.png' %}" alt="">
-            <img class="p_absolute f_email" src="{% static 'img/home_two/email-icon.png' %}" alt="">
-            <img class="p_absolute f_email_two" src="{% static 'img/home_two/email-icon_two.png' %}" alt="">
-            <img class="p_absolute f_man_two" src="{% static 'img/home_two/man.png' %}" alt="">
-            <div class="footer_top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-sm-6">
-                            <div class="f_widget subscribe_widget">
-                                <a href="index.html" class="f_logo"><img src="{% static 'img/logo.png' %}" alt=""></a>
-                                <h4 class="c_head">Subscribe to our newsletter</h4>
-                                <form action="#" class="footer_subscribe_form">
-                                    <input type="email" placeholder="Email" class="form-control">
-                                    <button type="submit" class="s_btn">Send</button>
-                                </form>
-                                <ul class="list-unstyled f_social_icon">
-                                    <li><a href="#"><i class="social_facebook"></i></a></li>
-                                    <li><a href="#"><i class="social_twitter"></i></a></li>
-                                    <li><a href="#"><i class="social_vimeo"></i></a></li>
-                                    <li><a href="#"><i class="social_linkedin"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="f_widget link_widget pl_30">
-                                <h3 class="f_title">Company</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Testimonials</a></li>
-                                    <li><a href="#">Affiliates</a></li>
-                                    <li><a href="#">Partners</a></li>
-                                    <li><a href="#">Careers</a></li>
-                                    <li><a href="#">Docly for Good</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-sm-6">
-                            <div class="f_widget link_widget">
-                                <h3 class="f_title">Support</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="index-cool.html">Help Desk</a></li>
-                                    <li><a href="#">Knowledge Base</a></li>
-                                    <li><a href="#">Live Chat</a></li>
-                                    <li><a href="#">Integrations</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">iOS & Android</a></li>
-                                    <li><a href="#">Messages</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="f_widget link_widget pl_70">
-                                <h3 class="f_title">Doc Pages</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="doclist.html">Doc Topic</a></li>
-                                    <li><a href="#">Free Training</a></li>
-                                    <li><a href="doc-archive.html">Doc Archive</a></li>
-                                    <li><a href="changelog.html">Changelog</a></li>
-                                    <li><a href="Onepage.html">Onepage Docs</a></li>
-                                    <li><a href="#">Conversion Tracking</a></li>
-                                    <li><a href="cheatsheet.html">Cheatseet</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border_bottom"></div>
-                </div>
-            </div>
-            <div class="footer_bottom text-center">
-                <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">Docly</a></p>
                 </div>
             </div>
         </footer>
