--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -155,7 +155,13 @@
                                         <div class="entry-content">
                                             <h3 class="post-title mt-0">
                                                 <a href="{% url 'show-content' file.get_url_path %}">
-                                                    {{ file.title }}
+                                                    {% if file.papers.bibtex.title == "" and file.note_type.name == 'papers' %}
+                                                        {{ file.title }}
+                                                    {% elif file.papers.bibtex.title != "" and file.note_type.name == 'papers' %}
+                                                        {{ file.papers.bibtex.title }}
+                                                    {% else %}
+                                                        {{ file.title }}
+                                                    {% endif %}
                                                 </a>
                                             </h3>
                                             <a class="badge color-ass" href="{% url 'status' file.status %}">{{ file.status }}</a>
@@ -164,6 +170,38 @@
                                                     <a class="badge color-green" href="{% url 'tag' tag.name %}">{{ tag.name }}</a>
                                                 {% endfor %}
                                             </div>
+                                            <div class="list-unstyled ticket_categories my-2">
+                                                {% if file.note_type.name == 'papers' %}
+                                                    <style>
+                                                        .community-post.style-two {
+                                                            margin-bottom: 20px;
+                                                        }
+                                                    </style>
+                                                    <li class="py-1">
+                                                        <a><strong><em>Year:</em></strong> 
+                                                            {% if file.papers.bibtex.year == "" %} 
+                                                                {{ file.date_modified }} 
+                                                            {% else %} 
+                                                                {{ file.papers.bibtex.year }} 
+                                                            {% endif %} 
+                                                        </a>
+                                                    </li>
+                                                    {% if file.papers.bibtex.journal != "" %}
+                                                        <li class="py-1">
+                                                            <a><strong><em>Journal:</em></strong> 
+                                                                {{ file.papers.bibtex.journal }} 
+                                                            </a>
+                                                        </li>
+                                                    {% endif %}
+                                                    {% if file.papers.bibtex.author != "" %}
+                                                        <li class="py-1">
+                                                            <a><strong><em>Authors:</em></strong> 
+                                                                {{ file.papers.bibtex.author }} 
+                                                            </a>
+                                                        </li>
+                                                    {% endif %}
+                                                {% endif %}
+                                                </div>
                                             <ul class="meta">
                                                 <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
                                             </ul>
@@ -181,7 +219,13 @@
                                             <div class="entry-content">
                                                 <h3 class="post-title mt-0">
                                                     <a href="{% url 'show-content' file.get_url_path %}">
-                                                        {{ file.title }}
+                                                        {% if file.papers.bibtex.title == "" and file.note_type.name == 'papers' %}
+                                                            {{ file.title }}
+                                                        {% elif file.papers.bibtex.title != "" and file.note_type.name == 'papers' %}
+                                                            {{ file.papers.bibtex.title }}
+                                                        {% else %}
+                                                            {{ file.title }}
+                                                        {% endif %}
                                                     </a>
                                                 </h3>
                                                 <a class="badge color-ass" href="{% url 'status' file.status %}">{{ file.status }}</a>
@@ -190,6 +234,38 @@
                                                         <a class="badge color-green" href="{% url 'tag' tag.name %}">{{ tag.name }}</a>
                                                     {% endfor %}
                                                 </div>
+                                                <div class="list-unstyled ticket_categories my-2">
+                                                    {% if file.note_type.name == 'papers' %}
+                                                        <style>
+                                                            .community-post.style-two {
+                                                                margin-bottom: 20px;
+                                                            }
+                                                        </style>
+                                                        <li class="py-1">
+                                                            <a><strong><em>Year:</em></strong> 
+                                                                {% if file.papers.bibtex.year == "" %} 
+                                                                    {{ file.date_modified }} 
+                                                                {% else %} 
+                                                                    {{ file.papers.bibtex.year }} 
+                                                                {% endif %} 
+                                                            </a>
+                                                        </li>
+                                                        {% if file.papers.bibtex.journal != "" %}
+                                                            <li class="py-1">
+                                                                <a><strong><em>Journal:</em></strong> 
+                                                                    {{ file.papers.bibtex.journal }} 
+                                                                </a>
+                                                            </li>
+                                                        {% endif %}
+                                                        {% if file.papers.bibtex.author != "" %}
+                                                            <li class="py-1">
+                                                                <a><strong><em>Authors:</em></strong> 
+                                                                    {{ file.papers.bibtex.author }} 
+                                                                </a>
+                                                            </li>
+                                                        {% endif %}
+                                                    {% endif %}
+                                                    </div>
                                                 <ul class="meta">
                                                     <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
                                                 </ul>
@@ -226,6 +302,11 @@
                             </div>
                             <div class="list-unstyled ticket_categories my-2">
                             {% if file.note_type.name == 'papers' %}
+                                <style>
+                                    .community-post.style-two {
+                                        margin-bottom: 20px;
+                                    }
+                                </style>
                                 <li class="py-1">
                                     <a><strong><em>Year:</em></strong> 
                                         {% if file.papers.bibtex.year == "" %} 
