--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -195,24 +195,24 @@
                 </div>
             </section>
         {% endblock breadcrumb %}
-        <section class="page_breadcrumb">
-            <div class="container custom_container">
-                <div class="row">
-                    <div class="col-sm-7">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
-                            </ol>
-                        </nav>
-                    </div>
-                    <div class="col-sm-5">
-                        <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+        {% block breadlinks %}
+            <section class="page_breadcrumb">
+                <div class="container custom_container">
+                    <div class="row">
+                        <div class="col-sm-7">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                                </ol>
+                            </nav>
+                        </div>
+                        <div class="col-sm-5">
+                            <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        {% endblock breadlinks %}
         <section class="doc_documentation_area" id="sticky_doc">
             <div class="overlay_bg"></div>
             <div class="container custom_container">
