I have completed the page for individual status and tags.

--- a/templates/all_tags.html
+++ b/templates/all_tags.html
@@ -164,7 +164,7 @@
 </div>
 
 <form name="filter-form" id="filter-form" style="visibility: hidden" method="get">
-    <input id="sort-select" name="sort">
+    {% comment %} <input id="sort-select" name="sort"> {% endcomment %}
     <input id="order-select" name="order">
     <button id="submit-filters"></button>
 </form>
