--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -11,7 +11,7 @@
                     </nav>
                 </div>
                 <div class="col-sm-5">
-                    <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+                    {% comment %} <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a> {% endcomment %}
                 </div>
             </div>
         </div>
