--- a/templates/tag.html
+++ b/templates/tag.html
@@ -7,11 +7,15 @@
             <div class="row">
                 <div class="col-sm-7">
                     <nav aria-label="breadcrumb">
-                        {{ folder.get_breadcrumb_html | safe }}
+                        <ol class="breadcrumb">
+                            <li class='breadcrumb-item'><a href='/'>Home</a></li>
+                            <li class='breadcrumb-item'><a href="{% url 'all_tags' %}">All Tags</a></li>
+                            <li class='breadcrumb-item active' aria-current='page'><a href='#'>{{ tag.name }}</a></li>
+                        </ol>
                     </nav>
                 </div>
                 <div class="col-sm-5">
-                    <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+                    {% comment %} <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a> {% endcomment %}
                 </div>
             </div>
         </div>
