--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -37,18 +37,13 @@
             <ul class="support-total-info">
                 <li class="d-flex align-items-center">
                     <img class='folder-index-img' src="{% static 'img/my-static/folder (4).png' %}">
-                    <a class='parent-link' href="
-                    {% if folder.parent.get_url_path != '' %}
-                        {% url 'show-content' folder.parent.get_url_path %}
-                    {% else %}
-                        {% url 'home' %}
-                    {% endif %}">
+                    {% comment %} <a class='parent-link' href="{% url 'home' %}">
                         {{ folder.parent.presentable_name }}
                     </a>
-                    &nbsp; / &nbsp;
+                    &nbsp; / &nbsp; {% endcomment %}
                     <a href="#">
                         <h4 class="m-0">
-                            {{ folder_name }}
+                            {{ search_term }}
                         </h4>
                     </a>
                 </li>
@@ -58,56 +53,6 @@
 
         <div class="support-category-menus">
             <ul class="category-menu">
-                {% comment %} <li>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Label
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLabel">
-                            <h3 class="title">Filter by label</h3>
-
-                            <form action="#" class="cate-search-form">
-                                <input type="text" placeholder="Filter users">
-                            </form>
-
-                            <div class="all-users">
-                                <a class="dropdown-item" data-rel="personal-notes" href="#0">
-                                    <span class="color-purple"></span>
-                                    KbDoc
-                                </a>
-                                <a class="dropdown-item" data-rel="improvement" href="#0">
-                                    <span class="color-yellow">
-                                    </span>
-                                    Improvement !
-                                </a>
-                                <a class="dropdown-item" data-rel="css" href="#0">
-                                    <span class="color-ass"></span>
-                                    CSS
-                                </a>
-                                <a class="dropdown-item" href="#0" data-rel="feature">
-                                    <span class="color-green"></span>
-                                    Feature
-                                </a>
-                                <a class="dropdown-item" data-rel="spider" href="#0">
-                                    <span class="color-orange"></span>
-                                    Spider theme
-                                </a>
-                                <a class="dropdown-item" href="#0" data-rel="open">
-                                    <span class="color-theme"></span>
-                                    Open
-                                </a>
-                                <a class="dropdown-item" data-rel="bug" href="#0">
-                                    <span class="color-pink"></span>
-                                    Bug !
-                                </a>
-                                <a class="dropdown-item" data-rel="doc" href="#0">
-                                    <span class="color-light-green"></span>
-                                    Docs
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </li> {% endcomment %}
                 <li>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -156,7 +101,7 @@
                 padding-right: unset;
             }
         </style>
-        {% for folder in folder.subfolders %}
+        {% for folder in folder_results %}
             <div class="community-post folder style-two feature personal-notes spider richard py-4 px-4">
                 <div class="post-content">
                     <div class="entry-content">
@@ -176,7 +121,7 @@
                 <div class="group bb-radius mt-5">
                     <h4 class="py-3 mt-0 pl-4 group-heading">{{ group }}</h4>
                     {% if current_grouping == 'Status' %}
-                        {% for file in folder.subfiles %}
+                        {% for file in file_results %}
                             {% if file.status == group %}
                                 <div class="community-post style-two feature personal-notes spider richard py-3 px-4">
                                     <div class="post-content">
@@ -239,7 +184,7 @@
                             {% endif %}
                         {% endfor %}
                     {% elif current_grouping == 'Tags' %}
-                        {% for file in folder.subfiles %}
+                        {% for file in file_results %}
                             {% for tag in file.tags.all %}
                                 {% if tag == group %}
                                     <div class="community-post style-two feature personal-notes spider richard py-3 px-4">
@@ -303,11 +248,79 @@
                                 {% endif %}
                             {% endfor %}
                         {% endfor %}
+                    {% elif current_grouping == 'Folders' %}
+                        {% for file in file_results %}
+                            {% for type in all_types %}
+                                {% if file.note_type == type %}
+                                    <div class="community-post style-two feature personal-notes spider richard py-3 px-4">
+                                        <div class="post-content">
+                                            <div class="entry-content">
+                                                <h3 class="post-title mt-0">
+                                                    <a href="{% url 'show-content' file.get_url_path %}">
+                                                        {% if file.papers.bibtex.title == "" and file.note_type.name == 'papers' %}
+                                                            {{ file.title }}
+                                                        {% elif file.papers.bibtex.title != "" and file.note_type.name == 'papers' %}
+                                                            {{ file.papers.bibtex.title }}
+                                                        {% else %}
+                                                            {{ file.title }}
+                                                        {% endif %}
+                                                    </a>
+                                                </h3>
+                                                <a class="badge color-ass" href="{% url 'status' file.status %}">{{ file.status }}</a>
+                                                <div class="cat-wrap d-block mb-1">
+                                                    {% for tag in file.tags.all %}
+                                                        <a class="badge color-green" href="{% url 'tag' tag.name %}">{{ tag.name }}</a>
+                                                    {% endfor %}
+                                                </div>
+                                                <div class="list-unstyled ticket_categories my-2">
+                                                    {% if file.note_type.name == 'papers' %}
+                                                        <style>
+                                                            .community-post.style-two {
+                                                                margin-bottom: 20px;
+                                                            }
+                                                        </style>
+                                                        <li class="py-1">
+                                                            <a><strong><em>Year:</em></strong> 
+                                                                {% if file.papers.bibtex.year == "" %} 
+                                                                    {{ file.date_modified }} 
+                                                                {% else %} 
+                                                                    {{ file.papers.bibtex.year }} 
+                                                                {% endif %} 
+                                                            </a>
+                                                        </li>
+                                                        {% if file.papers.bibtex.journal != "" %}
+                                                            <li class="py-1">
+                                                                <a><strong><em>Journal:</em></strong> 
+                                                                    {{ file.papers.bibtex.journal }} 
+                                                                </a>
+                                                            </li>
+                                                        {% endif %}
+                                                        {% if file.papers.bibtex.author != "" %}
+                                                            <li class="py-1">
+                                                                <a><strong><em>Authors:</em></strong> 
+                                                                    {{ file.papers.bibtex.author }} 
+                                                                </a>
+                                                            </li>
+                                                        {% endif %}
+                                                    {% endif %}
+                                                    </div>
+                                                <ul class="meta">
+                                                    <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
+                                                </ul>
+                                                <div class="mt-2">
+                                                    {{ file.get_breadcrumb_html | safe }}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
                     {% endif %}
                 </div>
             {% endfor %}
         {% else %}
-            {% for file in folder.subfiles %}
+            {% for file in file_results %}
                 <div class="community-post style-two feature personal-notes spider richard py-3 px-4">
                     <div class="post-content">
                         <div class="entry-content">
@@ -369,91 +382,12 @@
             {% endfor %}
         {% endif %}
     </div>
-    {% comment %} <article class="documentation_body py-0" id="documentation">
-        <h3>{{ folder_name }}</h3>
-        <div class='file-list'>
-            {% for file in folder.subfiles %}
-                <a href='{% url 'show-content' file.get_url_path %}'><p>{{ file.title }}</p></a>
-                <p class='pl-4'> {{ file.title }} </p>
-                <p class='pl-4'> {{ file.date_modified }} </p>
-                <p class='pl-4'> {{ file.status }} </p>
-                <p class='pl-4'> {{ file.tags.name }} </p>
-            {% endfor %}
-        </div>
-    </article> {% endcomment %}
-    <div class="scroll mt-5 pt-2">
-        <ul class="list-unstyled nav-sidebar" style="overflow: auto">
-            {% comment %} <li class="nav-item">
-                <a href="doclist.html" class="nav-link"><img src="img/side-nav/home.png" alt="">Home</a>
-            </li> {% endcomment %}
-            {% comment %} <li class='nav-item subfolder'>
-                <a href='#' class='nav-link'>
-                    <img class="flat-icon" src="img/side-nav/folder.png" alt='folder'>
-                    Old Notes
-                </a>
-                <span class='icon'><i class='arrow_carrot-down'></i></span>
-                <ul class='list-unstyled dropdown_nav overflow-auto' style="overflow-y: auto">
-                    <li class='nav-item subfolder'>
-                        <a href='#' class='nav-link'>
-                            <img class="flat-icon" src="img/side-nav/folder.png" alt='folder'>
-                            Old Notes
-                        </a>
-                        <span class='icon'><i class='arrow_carrot-down'></i></span>
-                        <ul class='list-unstyled dropdown_nav'>
-                            <li class="file-link">
-                                <a href='tab.html'>
-                                    <img class="file-icon" src="img/side-nav/file.png" alt='folder'>
-                                    Introduction to Economics -- Lecture 3
-                                </a>
-                            </li>
-                            <li class="file-link">
-                                <a href='tab.html'>
-                                    <img class="file-icon" src="img/side-nav/file.png" alt='folder'>
-                                    Introduction to Economics -- Lecture 1
-                                </a>
-                            </li>
-                            <li class="file-link">
-                                <a  href='tab.html'>
-                                    <img class="file-icon" src="img/side-nav/file.png" alt='folder'>
-                                    Introduction to Economics -- Lecture 2
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="file-link">
-                        <a href='tab.html'>
-                            <img class="file-icon" src="img/side-nav/file.png" alt='folder'>
-                            Intermediate Economics -- Lecture 1-2
-                        </a>
-                    </li>
-                    <li class="file-link">
-                        <a href='tab.html'>
-                            <img class="file-icon" src="img/side-nav/file.png" alt='folder'>
-                            Intermediate Economics -- Lecture 2-2
-                        </a>
-                    </li>
-                </ul>
-            </li> {% endcomment %}
-            <li class='nav-item subfolder active ml-4'>
-                <a href='#' class='nav-link'>
-                    <img class="flat-icon" src="{% static 'img/side-nav/folder.png' %}" alt='folder'>
-                    {{ folder_name }}
-                </a>
-                <span class='icon'><i class='arrow_carrot-down'></i></span>
-                <ul class='list-unstyled dropdown_nav'>
-                    {% autoescape off %}
-                        {{folder_tree }}
-                    {% endautoescape %}
-                </ul>
-            </li>
-
-        </ul>
-    </div>
 </div>
 
 <form name="filter-form" id="filter-form" style="visibility: hidden" method="get">
     <input id="sort-select" name="sort">
     <input id="group-select" name="group">
+    <input id="search-input" name="search_input">
     <button id="submit-filters"></button>
 </form>
 
@@ -464,6 +398,7 @@
             let group_option = $(".group-by .active-short").text();
             $("#sort-select").attr("value", sort_option);
             $("#group-select").attr("value", group_option);
+            $("#search-input").attr("value", "{{ search_term }}");
             $("#submit-filters").click()
         })
     })
