I have modified the search bar on some pages to allow grouping functionalities. I also made the search page to show all the folders and files in the root folder if the search field is submitted empty.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9877,3 +9877,7 @@ ul.contains-task-list li.task-list-item input:checked {
 .breadcrumb-item.active a {
   font-weight: 500;
 }
+
+.bread-div {
+  margin-top: 0.8rem;
+}
