--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -102,7 +102,7 @@
             }
         </style>
         {% for folder in folder_results %}
-            <div class="community-post folder style-two feature personal-notes spider richard py-4 px-4">
+            <div class="community-post folder style-two feature personal-notes spider richard py-4 px-4 mb-3">
                 <div class="post-content">
                     <div class="entry-content">
                         <h3 class="post-title mt-0 folder-name">
@@ -178,6 +178,9 @@
                                             <ul class="meta">
                                                 <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
                                             </ul>
+                                            <div class="bread-div">
+                                                {{ file.get_breadcrumb_html | safe }}
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -242,6 +245,9 @@
                                                 <ul class="meta">
                                                     <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
                                                 </ul>
+                                                <div class="bread-div">
+                                                    {{ file.get_breadcrumb_html | safe }}
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -250,71 +256,69 @@
                         {% endfor %}
                     {% elif current_grouping == 'Folders' %}
                         {% for file in file_results %}
-                            {% for type in all_types %}
-                                {% if file.note_type == type %}
-                                    <div class="community-post style-two feature personal-notes spider richard py-3 px-4">
-                                        <div class="post-content">
-                                            <div class="entry-content">
-                                                <h3 class="post-title mt-0">
-                                                    <a href="{% url 'show-content' file.get_url_path %}">
-                                                        {% if file.papers.bibtex.title == "" and file.note_type.name == 'papers' %}
-                                                            {{ file.title }}
-                                                        {% elif file.papers.bibtex.title != "" and file.note_type.name == 'papers' %}
-                                                            {{ file.papers.bibtex.title }}
-                                                        {% else %}
-                                                            {{ file.title }}
-                                                        {% endif %}
-                                                    </a>
-                                                </h3>
-                                                <a class="badge color-ass" href="{% url 'status' file.status %}">{{ file.status }}</a>
-                                                <div class="cat-wrap d-block mb-1">
-                                                    {% for tag in file.tags.all %}
-                                                        <a class="badge color-green" href="{% url 'tag' tag.name %}">{{ tag.name }}</a>
-                                                    {% endfor %}
-                                                </div>
-                                                <div class="list-unstyled ticket_categories my-2">
-                                                    {% if file.note_type.name == 'papers' %}
-                                                        <style>
-                                                            .community-post.style-two {
-                                                                margin-bottom: 20px;
-                                                            }
-                                                        </style>
+                            {% if file.note_type == group %}
+                                <div class="community-post style-two feature personal-notes spider richard py-3 px-4">
+                                    <div class="post-content">
+                                        <div class="entry-content">
+                                            <h3 class="post-title mt-0">
+                                                <a href="{% url 'show-content' file.get_url_path %}">
+                                                    {% if file.papers.bibtex.title == "" and file.note_type.name == 'papers' %}
+                                                        {{ file.title }}
+                                                    {% elif file.papers.bibtex.title != "" and file.note_type.name == 'papers' %}
+                                                        {{ file.papers.bibtex.title }}
+                                                    {% else %}
+                                                        {{ file.title }}
+                                                    {% endif %}
+                                                </a>
+                                            </h3>
+                                            <a class="badge color-ass" href="{% url 'status' file.status %}">{{ file.status }}</a>
+                                            <div class="cat-wrap d-block mb-1">
+                                                {% for tag in file.tags.all %}
+                                                    <a class="badge color-green" href="{% url 'tag' tag.name %}">{{ tag.name }}</a>
+                                                {% endfor %}
+                                            </div>
+                                            <div class="list-unstyled ticket_categories my-2">
+                                                {% if file.note_type.name == 'papers' %}
+                                                    <style>
+                                                        .community-post.style-two {
+                                                            margin-bottom: 20px;
+                                                        }
+                                                    </style>
+                                                    <li class="py-1">
+                                                        <a><strong><em>Year:</em></strong> 
+                                                            {% if file.papers.bibtex.year == "" %} 
+                                                                {{ file.date_modified }} 
+                                                            {% else %} 
+                                                                {{ file.papers.bibtex.year }} 
+                                                            {% endif %} 
+                                                        </a>
+                                                    </li>
+                                                    {% if file.papers.bibtex.journal != "" %}
                                                         <li class="py-1">
-                                                            <a><strong><em>Year:</em></strong> 
-                                                                {% if file.papers.bibtex.year == "" %} 
-                                                                    {{ file.date_modified }} 
-                                                                {% else %} 
-                                                                    {{ file.papers.bibtex.year }} 
-                                                                {% endif %} 
+                                                            <a><strong><em>Journal:</em></strong> 
+                                                                {{ file.papers.bibtex.journal }} 
                                                             </a>
                                                         </li>
-                                                        {% if file.papers.bibtex.journal != "" %}
-                                                            <li class="py-1">
-                                                                <a><strong><em>Journal:</em></strong> 
-                                                                    {{ file.papers.bibtex.journal }} 
-                                                                </a>
-                                                            </li>
-                                                        {% endif %}
-                                                        {% if file.papers.bibtex.author != "" %}
-                                                            <li class="py-1">
-                                                                <a><strong><em>Authors:</em></strong> 
-                                                                    {{ file.papers.bibtex.author }} 
-                                                                </a>
-                                                            </li>
-                                                        {% endif %}
                                                     {% endif %}
-                                                    </div>
-                                                <ul class="meta">
-                                                    <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
-                                                </ul>
-                                                <div class="mt-2">
-                                                    {{ file.get_breadcrumb_html | safe }}
+                                                    {% if file.papers.bibtex.author != "" %}
+                                                        <li class="py-1">
+                                                            <a><strong><em>Authors:</em></strong> 
+                                                                {{ file.papers.bibtex.author }} 
+                                                            </a>
+                                                        </li>
+                                                    {% endif %}
+                                                {% endif %}
                                                 </div>
+                                            <ul class="meta">
+                                                <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
+                                            </ul>
+                                            <div class="bread-div">
+                                                {{ file.get_breadcrumb_html | safe }}
                                             </div>
                                         </div>
                                     </div>
-                                {% endif %}
-                            {% endfor %}
+                                </div>
+                            {% endif %}
                         {% endfor %}
                     {% endif %}
                 </div>
@@ -376,6 +380,9 @@
                             <ul class="meta">
                                 <li><i class="icon_calendar"></i>Updated {{ file.date_modified }}</li>
                             </ul>
+                            <div class="bread-div">
+                                {{ file.get_breadcrumb_html | safe }}
+                            </div>
                         </div>
                     </div>
                 </div>
