I have turned off debug because heroku is throwing a secret key improperly configured error when I try to deploy.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9881,3 +9881,7 @@ ul.contains-task-list li.task-list-item input:checked {
 .bread-div {
   margin-top: 0.8rem;
 }
+
+.cat-wrap.d-block {
+  margin-top: 0.16rem;
+}
