Unused stylesheets and javascript have been commented out.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,9 +163,9 @@ button:focus {
 }
 
 /** === Container === **/
-.body_wrapper {
+/* .body_wrapper {
   overflow: hidden;
-}
+} */
 
 @media (min-width: 1200px) {
   .container {
