--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- icon css-->
     <link rel="stylesheet" href="{% static 'assets/elagent-icon/style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/animation/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>My Research Notes</title>
@@ -111,15 +111,15 @@
     <!-- jQuery first, then Popper.js' %}, then Bootstrap JS -->
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/pre-loader.js' %}"> </script>
-    <script src="{% static 'js/pre-loader.js' %}"> </script>
+    {% comment %} <script src="{% static 'js/pre-loader.js' %}"> </script> {% endcomment %}
     <script src="{% static 'assets/bootstrap/js/popper.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'assets/slick/slick.min.js' %}"></script>
-    <script src="{% static 'js/parallaxie.js' %}"></script>
-    <script src="{% static 'js/TweenMax.min.js' %}"></script>
-    <script src="{% static 'js/jquery.wavify.js' %}"></script>
+    {% comment %} <script src="{% static 'js/parallaxie.js' %}"></script> {% endcomment %}
+    {% comment %} <script src="{% static 'js/TweenMax.min.js' %}"></script> {% endcomment %}
+    {% comment %} <script src="{% static 'js/jquery.wavify.js' %}"></script> {% endcomment %}
     <script src="{% static 'assets/wow/wow.min.js' %}"></script>
-    <script src="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+    {% comment %} <script src="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script> {% endcomment %}
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 
