--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'assets/animation/animate.css' %}">
     <link rel="stylesheet" href="{% static 'assets/prism/prism.css' %}">
     <link rel="stylesheet" href="{% static 'assets/prism/prism-coy.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
@@ -366,16 +366,16 @@
     <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <script src="{% static 'assets/bootstrap/js/popper.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'assets/bootstrap/js/bootstrap-select.min.js' %}"></script>
+    {% comment %} <script src="{% static 'assets/bootstrap/js/bootstrap-select.min.js' %}"></script> {% endcomment %}
     <script src="{% static 'assets/font-size/js/rv-jquery-fontsize-2.0.3.js' %}"></script>
-    <script src="{% static 'js/parallaxie.js' %}"></script>
-    <script src="{% static 'js/TweenMax.min.js' %}"></script>
-    <script src="{% static 'js/anchor.js' %}"></script>
+    {% comment %} <script src="{% static 'js/parallaxie.js' %}"></script> {% endcomment %}
+    {% comment %} <script src="{% static 'js/TweenMax.min.js' %}"></script> {% endcomment %}
+    {% comment %} <script src="{% static 'js/anchor.js' %}"></script> {% endcomment %}
     <script src="{% static 'assets/wow/wow.min.js' %}"></script>
     <script src="{% static 'assets/prism/prism.js' %}"></script>
     {% comment %} <script src="{% static 'assets/mailchimp/plugins.js' %}"></script> {% endcomment %}
     <script src="{% static 'assets/niceselectpicker/jquery.nice-select.min.js' %}"></script>
-    <script src="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+    {% comment %} <script src="{% static 'assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script> {% endcomment %}
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 
