--- a/templates/doc-base.html
+++ b/templates/doc-base.html
@@ -265,7 +265,7 @@
                                 <div class="doc_switch">
                                     <label for="something" class="tab-btn tab-btns"><i class="icon_lightbulb_alt"></i></label>
                                     <input type="checkbox" name="something" id="something" class="tab_switcher">
-                                    <label for="something" class="tab-btn"><i class="far fa-moon"></i></label>
+                                    <label for="something" class="tab-btn"><i class="icon_star_alt"></i></label>
                                 </div>
                                 <h6>Table of Contents</h6>
                                 <nav class="list-unstyled doc_menu" id="navbar-example3">
