--- a/templates/folder-tree.html
+++ b/templates/folder-tree.html
@@ -319,7 +319,7 @@
         {% endif %}
     </div>
     <div class="scroll mt-5 pt-2">
-        <ul class="list-unstyled nav-sidebar" style="overflow: auto">
+        <ul class="list-unstyled nav-sidebar main-nav" style="overflow: auto">
             <li class='nav-item subfolder active ml-4'>
                 <a href='#' class='nav-link'>
                     <img class="flat-icon" src="{% static 'img/side-nav/folder.png' %}" alt='folder'>
